@@ -1,7 +1,19 @@
 package net.auoeke.gronk;
 
 import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+import net.auoeke.reflect.Classes;
+import net.auoeke.reflect.Pointer;
 import org.gradle.api.Project;
+import org.gradle.api.tasks.SourceSet;
+import org.gradle.api.tasks.compile.JavaCompile;
+import org.gradle.api.tasks.javadoc.Javadoc;
+import org.gradle.external.javadoc.CoreJavadocOptions;
+import org.gradle.external.javadoc.JavadocOptionFileOption;
+import org.gradle.external.javadoc.internal.JavadocOptionFile;
+
+import static net.auoeke.dycon.Dycon.*;
 
 public class GronkExtension {
     public String fallbackVersion = "latest.release";
@@ -39,4 +51,46 @@ public class GronkExtension {
                 .all(set -> project.getDependencies().add(set.getAnnotationProcessorConfigurationName(), "net.auoeke:uncheck"));
         }));
     }
+
+    public void export(SourceSet set, String modulePackage, String otherModule) {
+        if (otherModule == null) {
+            otherModule = "ALL-UNNAMED";
+        }
+
+        var compileJava = set.getCompileJavaTaskName();
+        var value = modulePackage + '=' + otherModule;
+
+        this.project.getTasks().matching(task -> task.getName().equals(compileJava)).all(task -> {
+            var arguments = ((JavaCompile) task).getOptions().getCompilerArgs();
+            arguments.add("--add-exports");
+            arguments.add(value);
+        });
+
+        var javadoc = set.getJavadocTaskName();
+
+        this.project.getTasks().matching(task -> task.getName().equals(javadoc)).all(task -> {
+            var options = (CoreJavadocOptions) ((Javadoc) task).getOptions();
+            var optionFile = ldc(() -> Pointer.of(CoreJavadocOptions.class, "optionFile")).<JavadocOptionFile>getT(options);
+            var optionMap = Classes.<Map<String, JavadocOptionFileOption<List<String>>>>cast(optionFile.getOptions());
+			var option = optionMap.get("-add-exports");
+
+			if (option == null) {
+				option = options.addMultilineStringsOption("-add-exports");
+			}
+
+            option.getValue().add(value);
+        });
+    }
+
+	public void export(SourceSet set, String modulePackage) {
+		this.export(set, modulePackage, null);
+	}
+
+	public void export(SourceSet set, Iterable<String> modulesPackages, String otherModule) {
+		modulesPackages.forEach(modulePackage -> this.export(set, modulePackage, otherModule));
+	}
+
+	public void export(SourceSet set, Iterable<String> modulesPackages) {
+		modulesPackages.forEach(modulePackage -> this.export(set, modulePackage, null));
+	}
 }
